// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders accept colours correctly 1`] = `
<div>
  <span
    class="Button__Span-sc-o80e68-0 Button__SpanAccept-sc-o80e68-3 hbAGrJ jelbpC"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders accept colours correctly on a thin button 1`] = `
<div>
  <span
    class="Button__Span-sc-o80e68-0 Button__SpanAccept-sc-o80e68-3 hbAGrJ jelbpC"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders cancel colours correctly 1`] = `
<div>
  <span
    class="Button__Span-sc-o80e68-0 Button__SpanCancel-sc-o80e68-4 hbAGrJ bTSMet"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders cancel colours correctly on a thin button 1`] = `
<div>
  <span
    class="Button__Span-sc-o80e68-0 Button__SpanCancel-sc-o80e68-4 hbAGrJ bTSMet"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders default colours correctly 1`] = `
<div>
  <span
    class="Button__Span-sc-o80e68-0 Button__SpanDefault-sc-o80e68-2 hbAGrJ hWgwyh"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders default colours correctly on a thin button 1`] = `
<div>
  <span
    class="Button__SpanThin-sc-o80e68-1 Button__SpanDefaultThin-sc-o80e68-5 jlfLWh eQMiB"
  >
    Button
  </span>
</div>
`;
